src-tauri/check_output.txt
    Checking hawkward-journal-ai v0.1.0 (E:\Abir\LocalCodeRepo\HawkwardJournalAI\src-tauri)
error[E0034]: multiple applicable items in scope
   --> src\ai\client.rs:167:46
    |
167 |         let stream = response.bytes_stream().map(|item| {
    |                                              ^^^ multiple `map` found
    |
    = note: candidate #1 is defined in an impl of the trait `tokio_stream::StreamExt` for the type `St`
    = note: candidate #2 is defined in an impl of the trait `futures_util::StreamExt` for the type `T`
help: disambiguate the method for candidate #1
    |
167 ~         let stream = tokio_stream::StreamExt::map(response.bytes_stream(), |item| {
168 +             match item {
169 +                 Ok(bytes) => {
170 +                     let text = String::from_utf8_lossy(&bytes);
171 +                     let mut parts = Vec::new();
172 +                     for line in text.split('\n') {
173 +                         let trimmed = line.trim();
174 +                         if !trimmed.is_empty() {
175 +                             let part: ChatResponsePart = serde_json::from_str(trimmed)
176 +                                 .map_err(|e| AppError::AiError(format!("Failed to parse stream part: {} | Raw: {}", e, trimmed)))?;
177 +                             parts.push(Ok(part));
178 +                         }
179 +                     }
180 +                     Ok(parts)
181 +                 }
182 +                 Err(e) => Err(AppError::AiError(format!("Stream error: {}", e))),
183 +             }
184 ~         });
    |
help: disambiguate the method for candidate #2
    |
167 ~         let stream = futures_util::StreamExt::map(response.bytes_stream(), |item| {
168 +             match item {
169 +                 Ok(bytes) => {
170 +                     let text = String::from_utf8_lossy(&bytes);
171 +                     let mut parts = Vec::new();
172 +                     for line in text.split('\n') {
173 +                         let trimmed = line.trim();
174 +                         if !trimmed.is_empty() {
175 +                             let part: ChatResponsePart = serde_json::from_str(trimmed)
176 +                                 .map_err(|e| AppError::AiError(format!("Failed to parse stream part: {} | Raw: {}", e, trimmed)))?;
177 +                             parts.push(Ok(part));
178 +                         }
179 +                     }
180 +                     Ok(parts)
181 +                 }
182 +                 Err(e) => Err(AppError::AiError(format!("Stream error: {}", e))),
183 +             }
184 ~         });
    |

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
   --> src\ai\client.rs:169:20
    |
169 |                 Ok(bytes) => {
    |                    ^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `[u8]`
    = note: all local variables must have a statically known size

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
   --> src\ai\client.rs:169:17
    |
169 |                 Ok(bytes) => {
    |                 ^^^^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `std::prelude::v1::Ok`
   --> C:\Users\shahr\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\result.rs:557:17
    |
557 | pub enum Result<T, E> {
    |                 ^ required by this bound in `std::prelude::v1::Ok`
...
561 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     -- required by a bound in this tuple variant

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
   --> src\ai\client.rs:182:17
    |
182 |                 Err(e) => Err(AppError::AiError(format!("Stream error: {}", e))),
    |                 ^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `std::prelude::v1::Err`
   --> C:\Users\shahr\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\result.rs:557:17
    |
557 | pub enum Result<T, E> {
    |                 ^ required by this bound in `std::prelude::v1::Err`
...
566 |     Err(#[stable(feature = "rust1", since = "1.0.0")] E),
    |     --- required by a bound in this tuple variant

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
   --> src\ai\client.rs:167:51
    |
167 |         let stream = response.bytes_stream().map(|item| {
    |                                                   ^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `[u8]`
note: required by an implicit `Sized` bound in `Result`
   --> C:\Users\shahr\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\result.rs:557:17
    |
557 | pub enum Result<T, E> {
    |                 ^ required by the implicit `Sized` requirement on this type parameter in `Result`

